# serde-roundtrip

./: Cargo.toml  README.md
examples/: deriving.rs
serde-roundtrip-derive/: Cargo.toml  lib.rs
src/: lib.rs
tests/: lib.rs
