[package]
name = "serde_roundtrip_derive"
version = "0.1.2"
authors = ["ajeffrey@mozilla.com"]
repository = "https://github.com/asajeffrey/serde_roundtrip"
description = "Deriving a trait for when serde supports serializing at one type and deserializing as another."
keywords = ["serde","serialization"]
license = "MPL-2.0"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = {version = "0.11", features = ["fold"]}
quote = "0.3"
